--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".changePasswordActivity">
 
     <LinearLayout
@@ -75,7 +76,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:text="SUBMIT" />
+                android:background="@color/black"
+                android:text="SUBMIT"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/resulText"
