--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:text="LOG IN" />
+            android:background="@color/black"
+            android:text="LOG IN"
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textView2"
