--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="15dp"
-            android:background="#1A237E"
+            android:background="@color/black"
             android:text="Create Account"
             android:textColor="@color/white"
             app:rippleColor="@color/black" />
@@ -96,9 +96,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
+            android:background="@color/black"
             android:clickable="true"
             android:enabled="true"
-            android:text="Log in" />
+            android:text="Log in"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
