--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -45,7 +45,7 @@
                     android:background="@drawable/edittext"
                     android:ems="10"
                     android:hint="new password"
-                    android:inputType="textPassword|textEmailSubject" />
+                    android:inputType="textPassword" />
             </TableRow>
 
             <TableRow
